docs/v2.3.x/api/visitable.md
---
layout: page
title: Visitable
---

{% raw %}
### Methods


<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

#### Table of Contents

*   [visitable][1]
    *   [Parameters][2]
    *   [Examples][3]

### visitable

#### Parameters

*   `path` **[string][4]** Full path of the route to visit

#### Examples

```javascript
import { create, visitable } from 'ember-cli-page-object';

const page = create({
  visit: visitable('/users')
});

// visits '/users'
await page.visit();
```

```javascript
import { create, visitable } from 'ember-cli-page-object';

const page = create({
  visit: visitable('/users/:user_id')
});

// visits '/users/10'
await page.visit({ user_id: 10 });
```

```javascript
import { create, visitable } from 'ember-cli-page-object';

const page = create({
  visit: visitable('/users')
});

// visits '/users?name=john'
await page.visit({ name: 'john' });
```

```javascript
import { create, visitable } from 'ember-cli-page-object';

const page = create({
  visit: visitable('/users/:user_id')
});

// visits '/users/1?name=john'
await page.visit({ user_id: 1, name: 'john' });
```

*   Throws **any** Will throw an error if dynamic segments are not filled.
    Note: An error instance may contain a `cause.error` property
    with the original error thrown by an underlying test helper.

Returns **Descriptor**&#x20;

[1]: #visitable

[2]: #parameters

[3]: #examples

[4]: https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String
{% endraw %}